feat: all laws view

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Lawgorithm",
-  "name": "Lawgorithm",
+  "short_name": "Lawgarithm",
+  "name": "Lawgarithm",
   "icons": [
     {
       "src": "img/icons/logo192.png",
